--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -98,8 +98,8 @@
                 <!-- signs -->
                 <LinearLayout
                     android:background="@color/gray_background_2"
-                    android:id="@+id/achievements_container"
-                    android:layout_height="@dimen/master_achievements_container_height"
+                    android:id="@+id/signs_container"
+                    android:layout_height="@dimen/master_signs_container_height"
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:padding="10dp" />
