--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,12 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="gray_text">#bdbdbd</color>
-    <color name="gray_background_1">#f5f5f5</color>
-    <color name="gray_background_2">#eeeeee</color>
-    <color name="gray_background_3">#e0e0e0</color>
-    <color name="gray_background_4">#bdbdbd</color>
-    <color name="gray_background_5">#9e9e9e</color>
+    <color name="gray_background_1">#fafafa</color>
+    <color name="gray_background_2">#f5f5f5</color>
+    <color name="gray_background_3">#eeeeee</color>
+    <color name="gray_background_4">#e0e0e0</color>
+    <color name="gray_background_5">#bdbdbd</color>
+    <color name="gray_background_6">#9e9e9e</color>
 
     <!-- view pager dots -->
     <color name="view_pager_active_dot">@color/black</color>
