--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -1,78 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:background="@android:color/background_light"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:background="@android:color/background_light"
+        android:orientation="vertical">
 
-        <android.support.design.widget.AppBarLayout
-            android:fitsSystemWindows="true"
-            android:layout_height="225dp"
+        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:fitsSystemWindows="true"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginEnd="64dp"
-                app:expandedTitleMarginStart="48dp"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        </android.support.v7.widget.Toolbar>
 
-
-                <ImageView
-                    android:fitsSystemWindows="true"
-                    android:id="@+id/toolbar_image"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"
-                    tools:ignore="contentDescription" />
-
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_width="match_parent"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-            </android.support.design.widget.CollapsingToolbarLayout>
-        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <!-- map -->
                 <RelativeLayout
                     android:id="@+id/map_container"
-                    android:layout_height="@dimen/master_map_height"
-                    android:layout_width="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/master_map_height">
 
                     <ru.yandex.yandexmapkit.MapView
-                        android:apiKey="1234567890"
                         android:id="@+id/map"
-                        android:layout_height="match_parent"
                         android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:apiKey="1234567890"
                         android:tag="static" />
 
                     <TextView
-                        android:background="#afffffff"
                         android:id="@+id/address_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
+                        android:background="#c8ffffff"
                         android:paddingEnd="5dp"
                         android:paddingStart="5dp"
                         android:textColor="@color/black"
@@ -81,14 +60,14 @@
 
                 <!-- workers -->
                 <HorizontalScrollView
-                    android:background="@color/gray_background_1"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent">
+                    android:background="@color/white">
 
                     <LinearLayout
                         android:id="@+id/workers_container"
-                        android:layout_height="match_parent"
                         android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                     </LinearLayout>
@@ -97,64 +76,56 @@
 
                 <!-- signs -->
                 <LinearLayout
-                    android:background="@color/gray_background_2"
                     android:id="@+id/signs_container"
-                    android:layout_height="@dimen/master_signs_container_height"
                     android:layout_width="match_parent"
+                    android:layout_height="@dimen/master_signs_container_height"
+                    android:background="@color/gray_background_1"
                     android:orientation="horizontal"
                     android:padding="10dp" />
 
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_height="wrap_content"
+                <!-- Photos -->
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/pager"
                     android:layout_width="match_parent"
-                    android:maxHeight="@dimen/master_main_image_height"
-                    android:scaleType="fitCenter"
-                    tools:ignore="contentDescription" />
+                    android:layout_height="@dimen/master_image_slider_height" />
 
+                <!-- Image slider dots -->
+                <LinearLayout
+                    android:id="@+id/dots_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:orientation="horizontal" />
 
                 <!-- opinions -->
                 <LinearLayout
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="10dp">
 
                     <TextView
                         android:id="@+id/first_opinion_tv"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="7dp"
-                        android:layout_width="wrap_content"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_body" />
 
                     <TextView
                         android:id="@+id/see_all_opinions_tv"
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/gray_text"
                         android:textSize="@dimen/text_size_body" />
                 </LinearLayout>
 
-                <!-- Schedule -->
-                <RelativeLayout
-                    android:background="@color/gray_background_3"
-                    android:layout_height="@dimen/master_schedule_height"
-                    android:layout_width="match_parent">
-
-                    <TextView
-                        android:layout_centerInParent="true"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="Здесь будет расписание"
-                        android:textColor="@color/black" />
-                </RelativeLayout>
 
                 <!-- initial cost block -->
                 <LinearLayout
-                    android:background="@color/gray_background_5"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/gray_background_5"
                     android:paddingBottom="@dimen/master_initial_cost_vertical_padding"
                     android:paddingLeft="@dimen/master_initial_cost_horizontal_padding"
                     android:paddingRight="@dimen/master_initial_cost_horizontal_padding"
@@ -162,58 +133,58 @@
 
                     <TextView
                         android:id="@+id/initial_cost_tv"
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_body" />
                 </LinearLayout>
 
                 <!-- radio -->
                 <LinearLayout
-                    android:background="@color/gray_background_2"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/gray_background_2"
                     android:orientation="vertical"
                     android:paddingTop="10dp">
 
                     <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
-                        android:layout_width="wrap_content"
                         android:text="Виды маникюра"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_size_body" />
 
                     <RadioGroup
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent">
+                        android:layout_marginTop="5dp">
 
                         <RadioButton
-                            android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Обрезной / классический . +0 р"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_body" />
 
                         <RadioButton
-                            android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Аппаратный . +200 р"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_body" />
 
                         <RadioButton
-                            android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Комбинированный . +0 р"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_body" />
 
                         <RadioButton
-                            android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Европейский . +0 р"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_body" />
@@ -221,10 +192,10 @@
                 </LinearLayout>
 
                 <View
-                    android:layout_height="400dp"
-                    android:layout_width="match_parent" />
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp" />
 
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 </layout>
