--- a/app/src/main/res/values/master_dimens.xml
+++ b/app/src/main/res/values/master_dimens.xml
@@ -6,8 +6,10 @@
     <dimen name="master_space_between_workers">10dp</dimen>
     <dimen name="master_worker_photo_size">64dp</dimen>
     <dimen name="master_signs_container_height">50dp</dimen>
+    <dimen name="master_space_between_signs">15dp</dimen>
     <dimen name="master_main_image_height">120dp</dimen>
     <dimen name="master_schedule_height">200dp</dimen>
     <dimen name="master_initial_cost_vertical_padding">10dp</dimen>
     <dimen name="master_initial_cost_horizontal_padding">10dp</dimen>
+    <dimen name="master_image_slider_height">240dp</dimen>
 </resources>
