--- a/app/src/main/res/values/text_sizes.xml
+++ b/app/src/main/res/values/text_sizes.xml
@@ -5,4 +5,5 @@
     <dimen name="text_size_subheading">16sp</dimen>
     <dimen name="text_size_body">14sp</dimen>
     <dimen name="text_size_caption">12sp</dimen>
+    <dimen name="text_size_pager_dots">8sp</dimen>
 </resources>
