--- a/app/src/main/res/layout/image_slider_with_footer.xml
+++ b/app/src/main/res/layout/image_slider_with_footer.xml
@@ -24,7 +24,7 @@
 
             <!-- Stars -->
             <TextView
-                android:id="@+id/rating"
+                android:id="@+id/stars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
