--- a/app/src/main/res/layout/master_fragment.xml
+++ b/app/src/main/res/layout/master_fragment.xml
@@ -112,78 +112,56 @@
                 </LinearLayout>
 
 
-                <!-- initial cost block -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/gray_background_5"
-                    android:paddingBottom="@dimen/master_initial_cost_vertical_padding"
-                    android:paddingLeft="@dimen/master_side_elements_padding"
-                    android:paddingRight="@dimen/master_side_elements_padding"
-                    android:paddingTop="@dimen/master_initial_cost_vertical_padding"
-                    android:tag="sticky">
-
-                    <TextView
-                        android:id="@+id/initial_cost_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_body" />
-                </LinearLayout>
-
-                <!-- radio -->
+                <!-- Total price block -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/gray_background_2"
-                    android:orientation="vertical"
-                    android:paddingTop="10dp">
+                    android:paddingBottom="@dimen/master_elements_vertical_padding"
+                    android:paddingLeft="@dimen/master_side_elements_padding"
+                    android:paddingRight="@dimen/master_side_elements_padding"
+                    android:paddingTop="@dimen/master_elements_vertical_padding"
+                    android:tag="sticky">
 
                     <TextView
+                        android:id="@+id/total_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Виды маникюра"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_body" />
-
-                    <RadioGroup
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp">
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Обрезной / классический . +0 р"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/text_size_body" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Аппаратный . +200 р"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/text_size_body" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Комбинированный . +0 р"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/text_size_body" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Европейский . +0 р"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/text_size_body" />
-                    </RadioGroup>
+                        android:textSize="@dimen/text_size_subheading" />
                 </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/service_groups_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/master_elements_vertical_padding"
+                    android:paddingEnd="@dimen/master_side_elements_padding"
+                    android:paddingStart="@dimen/master_side_elements_padding"
+                    android:paddingTop="@dimen/master_elements_vertical_padding">
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/services_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/master_elements_vertical_padding"
+                    android:paddingEnd="@dimen/master_side_elements_padding"
+                    android:paddingStart="@dimen/master_side_elements_padding"
+                    android:paddingTop="@dimen/master_elements_vertical_padding">
+
+
+                </LinearLayout>
+
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="700dp" />
+                    android:layout_height="500dp" />
 
             </LinearLayout>
         </com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>
