--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray_background_4">#e0e0e0</color>
     <color name="gray_background_5">#bdbdbd</color>
     <color name="gray_background_6">#9e9e9e</color>
+    <color name="divider_color">@color/gray_background_4</color>
 
     <!-- view pager dots -->
     <color name="view_pager_active_dot">@color/black</color>
