--- a/app/src/main/res/layout/image_slider_with_footer.xml
+++ b/app/src/main/res/layout/image_slider_with_footer.xml
@@ -7,11 +7,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Photos -->
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/image_slider_height" />
+            android:layout_height="@dimen/image_slider_height">
+
+            <!-- Photos -->
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <!-- Signs -->
+            <LinearLayout
+                android:id="@+id/signs_container"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/feed_signs_container_height"
+                android:layout_alignParentEnd="true"
+                android:orientation="horizontal"
+                android:padding="@dimen/feed_signs_container_padding" />
+
+        </RelativeLayout>
 
 
         <!-- Footer -->
@@ -25,14 +40,14 @@
             <!-- Stars -->
             <TextView
                 android:id="@+id/stars"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:drawablePadding="5dp"
                 android:drawableStart="@drawable/ic_star_black_24dp"
-                android:gravity="center_vertical"
-                style="@style/TextAppearance.AppCompat.Subhead" />
+                android:gravity="center_vertical" />
 
 
             <!-- Image slider dots -->
