--- a/app/src/main/res/layout/user_sign_up_fragment.xml
+++ b/app/src/main/res/layout/user_sign_up_fragment.xml
@@ -44,6 +44,7 @@
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
+                android:inputType="textEmailAddress"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
 
@@ -79,6 +80,7 @@
 
 
         <Button
+            android:id="@+id/sign_up_btn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="@dimen/auth_login_button_height"
