--- a/app/src/main/res/layout/image_slider_with_footer.xml
+++ b/app/src/main/res/layout/image_slider_with_footer.xml
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:drawablePadding="5dp"
+                android:drawablePadding="@dimen/feed_icon_drawable_padding"
                 android:drawableStart="@drawable/ic_star_black_24dp"
                 android:gravity="center_vertical" />
 
@@ -70,17 +70,16 @@
                 android:orientation="horizontal" />
 
 
-            <!-- Bookmark -->
-            <ImageButton
-                android:id="@+id/bookmark"
+            <!-- Comments -->
+            <TextView
+                android:id="@+id/comments"
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:background="?android:selectableItemBackground"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:src="@drawable/ic_bookmark_border_black_24dp"
+                android:drawableEnd="@drawable/ic_mode_comment_black_24dp"
+                android:drawablePadding="@dimen/feed_icon_drawable_padding"
                 tools:ignore="contentDescription" />
         </RelativeLayout>
     </LinearLayout>
