--- a/app/src/main/res/layout/master_activity.xml
+++ b/app/src/main/res/layout/master_activity.xml
@@ -172,6 +172,48 @@
 
                     <View style="@style/Divider" />
 
+                    <!-- Filters -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content">
+                        
+                        <TextView
+                            android:layout_width="wrap_content"
+                            style="@style/TextAppearance.AppCompat.Subhead"
+                            android:text="@string/visit_options"
+                            android:layout_height="wrap_content" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:orientation="horizontal">
+
+                            <Button
+                                style="@style/Base.Widget.AppCompat.Button.Colored"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="20 янв, 19:15" />
+
+                            <Button
+                                style="@style/Base.Widget.AppCompat.Button.Colored"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Пресненский" />
+
+                            <Button
+                                style="@style/Base.Widget.AppCompat.Button.Colored"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="3 услуги" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <View style="@style/Divider" />
+
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
